Fixing hero image heading spacing

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,7 +6,7 @@
 
 .heading {
     margin: auto; 
-    // border-left: 5px solid white;
+    max-width: 90%;
     height: 300px;
     display: flex;
 
